sass/_contact.scss
.contact {
  //Spacing
  width: 100%;
  margin: auto;
  padding: 5rem 0 1rem;

  //Color Styling
  background-color: $color-primary-dark;

  @media only screen and (max-width: $bp-medium) {
    //Display
    padding: 0;
  }

  &__box {
    //Display
    display: flex;
    justify-content: center;

    //Spacing
    width: 100%;
    margin: auto;

    //Image Styling
    background-image: url(../img/svg/Worldmap.svg);
    background-size: auto 100%;
    background-repeat: no-repeat;
    background-position: center center;

    @media only screen and (max-width: $bp-medium) {
      //Display
      background-image: none;
    }
  }

  &__container {
    //Display
    display: flex;
    justify-content: space-between;

    //Spacing
    width: 75%;
    margin: 0 5rem;
    padding: 10vh 0;

    @media only screen and (max-width: $bp-large) {
      //Spacing
      width: 100%;
    }
    @media only screen and (max-width: $bp-medium) {
      //Display
      flex-direction: column;
    }
    @media only screen and (max-width: $bp-small) {
      //Spacing
      padding: 5vh 0 5vh;
      height: min-content;
    }

    &-left {
      //Display
      flex: 1 1 50%;
      display: flex;
      flex-direction: column;

      //Spacing
      width: 100%;
      max-width: 90rem;

      @media only screen and (max-width: $bp-medium) {
        //Image Styling
        background-image: url(../img/svg/Worldmap.svg);
        background-size: 110% auto;
        background-repeat: no-repeat;
        background-position: center;
      }
    }
    &-right {
      //Display
      display: flex;
      flex: 1 1 50%;
      flex-direction: column;
      align-items: flex-end;

      //Spacing
      width: 100%;
      max-width: 90rem;

      &--box {
        //Display
        display: flex;
        flex-direction: column;

        //Color Styling
        background-color: rgba(255, 255, 255, 0.7);
        box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
        border-radius: $card-border-radius;

        //Spacing
        width: 100%;
        padding: 5rem;

        transition: all 0.3s;

        &:hover {
          //Color Styling
          background-color: rgba(255, 255, 255, 0.8);
        }
      }
    }
  }

  &__socials {
    //Display
    display: flex;

    & a:not(:last-child) {
      //Spacing
      margin-right: 2rem;
    }
  }

  &-svg {
    //Spacing
    height: 3.6rem;
    margin: 1rem 0;

    //Animations
    transition: scale 0.1s;

    &:hover {
      //Animations
      scale: 1.1;
    }
  }

  &__info {
    //Spacing
    padding: 4rem 2rem 4rem 6rem;

    //Color Styling
    background-color: rgba(255, 255, 255, 0.7);
    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
    border-radius: $card-border-radius;

    //Animations
    transition: all 0.3s;

    &:hover {
      //Color Styling
      background-color: rgba(255, 255, 255, 0.9);
    }

    h2 {
      //Spacing
      margin: 0 auto 2rem;
      width: auto;

      //Font Styling
      font-size: 3.2rem;

      //Color Styling
      color: $color-primary-dark;
    }
    h3 {
      //Spacing
      margin-top: 6rem;

      //Font Styling
      font-size: 1.6rem;

      //Color Styling
      color: $color-primary-accent-2;
    }
    p {
      //Spacing
      margin: 0.2rem 6rem 2rem 0;

      //Font Styling
      font-size: 2rem;
      font-weight: 300;

      @media only screen and (max-width: $bp-medium) {
        //Spacing
        margin: 0.5rem 0 2rem;

        //Font Styling
        font-size: 1.8rem;
      }
    }
    @media only screen and (max-width: $bp-medium) {
      //Spacing
      padding: 2rem;
      margin-bottom: 4rem;
    }
  }

  &-form {
    //Display
    display: flex;
    flex-direction: column;

    //Spacing
    width: 90%;

    @media only screen and (max-width: $bp-medium) {
      //Spacing
      width: 100%;
    }

    & label {
      //Font Styling
      font-size: 1.8rem;
    }

    & input {
      //Spacing
      padding: 0.8rem;
      margin-bottom: 2rem;

      //Border Styling
      border: 1px solid $color-grey-dark;
      border-radius: 5px;

      &:focus {
        //Border Styling
        border: 1px solid $color-grey-dark;
      }
    }

    & textarea {
      //Spacing
      padding: 0.8rem;

      //Border Styling
      border: 1px solid $color-grey-dark;
      border-radius: 5px;

      &:focus {
        //Border Styling
        border: 1px solid $color-grey-dark;
      }
    }

    & button {
      //Spacing
      margin: 3rem 0 0;

      //Border Styling
      border-radius: 5px;
    }
  }
}

